spec/e2e/return/at_top_level.lit
return "wat" # error: [line 1] Syntax error at "return": Can't return from top-level code.
